[project]
name = "fastSNE"
version = "1.0"
description = "fast tSNE"
authors = [{name = "Pierre Lambert", email = "pierre.h.lambert@uclouvain.be"}]
dependencies = [
    	"pycuda>=2024.1",
	"moderngl>=5.11.1",
    # other dependencies
]
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
